--- a/style.css
+++ b/style.css
@@ -3,24 +3,23 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Hanken Grotesk', sans-serif;
     box-sizing: border-box;
-    max-width: 1440px;
-    
 }
 
+html {
+    font-size: 60%;
+  }
+
 body {
-    margin: auto;
+    font-size: 1.6rem;
+    line-height: 1.5;
+    font-family: 'Hanken Grotesk', sans-serif;
     display: flex;
-    justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     background: #ecf2ff;
     
 }
-
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
 
 h1 {
     font-weight: 800;
@@ -39,15 +38,9 @@ p {
     background: #fff;
     flex-shrink: 0;
     width: 100%;
-    display: flex;
-    margin-inline: auto;
-    max-width: 50%;
-    border-radius: 32px;
-    box-shadow: 0px 30px 60px 0px rgba(61, 108, 236, 0.15);
   }
 
 .result {
-    width: 60%;
     background: linear-gradient(
         180deg,
         #75f 0%,
@@ -61,13 +54,13 @@ p {
     color: #fff;
     font-weight: 700;
     padding: 2rem 2.5rem 3rem 2.5rem;
-    border-radius: 32px;
+    border-radius: 0px 0px 32px 32px;
 }
 
 .result_title {
-    font-size: 1.2rem;
+    font-size: 1.8rem;
     color: #cac9ff;
-    margin-bottom: 1.8rem;
+    margin-bottom: 3.5rem;
 }
 
 .result_score {
@@ -78,7 +71,7 @@ p {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 1.8rem;
+    margin-bottom: 3rem;
     background: linear-gradient(
         180deg,
         #4d21c9 0%,
@@ -88,13 +81,13 @@ p {
 }
 
 .result_score h1 {
-    font-size: 3.5rem;
+    margin-bottom: -1rem;
+    font-size: 5.6rem;
 }
 
 .result_score p {
     color: #cac9ff;
     opacity: 0.7;
-    font-size: 0.9rem;
 }
 
 .feedback {
@@ -102,15 +95,15 @@ p {
 }
 
 .feedback h2 {
-    margin-bottom: 0.5rem;
+    font-size: 2.4rem;
+    margin-bottom: 0.8rem;
 }
 
 .feedback p {
     color: #cac9ff;
     margin-inline: auto;
     font-weight: 500;
-    font-size: 0.9rem;
-    max-width: 25ch;
+    max-width: 30ch;
 }
 
 /* summary */
@@ -119,3 +112,182 @@ p {
     padding-inline: 3rem;
     padding-bottom: 3rem;  
 }
+ 
+.summary_title {
+    font-size: 1.8rem;
+    color: #303b59;
+}
+
+.summary_cate {
+    margin-block: 2.8rem;
+}
+
+.summary_cate > * + * {
+    margin-top: 1.8rem;
+}
+
+.cate_category {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 12px;
+    padding: 1.7rem;
+}
+
+.category_heading {
+    display: flex;
+    gap: 1.5rem;
+    align-items: center;
+    font-weight: 500;
+}
+
+.category_score {
+    display: flex;
+    align-items: center;
+    gap: 0.7rem;
+    color: #303b59;
+    font-weight: 700;
+}
+
+.category_score :last-child {
+    opacity: 0.5;
+}
+
+.btn_continue {
+    width: 100%;
+    background: hsl(224, 30%, 27%);
+    color: #fff;  
+    font-weight: 600;
+    font-size: 1.8rem;
+    text-align: center;
+    padding: 1.8rem;
+    border-radius: 12rem;
+    border: none;
+}
+
+/* color cate */
+
+.cate_category--red {
+    background: linear-gradient(
+        0deg,
+        rgba(255, 255, 255, 0.95) 0%,
+        rgba(255, 255, 255, 0.95) 100%
+      ),
+      hsl(0, 100%, 67%);
+    color: hsl(0, 100%, 67%);
+  }
+
+  .cate_category--yellow {
+    background: linear-gradient(
+        0deg,
+        rgba(255, 255, 255, 0.95) 0%,
+        rgba(255, 255, 255, 0.95) 100%
+      ),
+      hsl(39, 100%, 56%);
+    color: hsl(39, 100%, 56%);
+  }
+
+  .cate_category--green {
+    background: linear-gradient(
+        0deg,
+        rgba(255, 255, 255, 0.95) 0%,
+        rgba(255, 255, 255, 0.95) 100%
+      ),
+      hsl(166, 100%, 37%);
+    color: hsl(166, 100%, 37%);
+  }
+
+  .cate_category--blue {
+    background: linear-gradient(
+        0deg,
+        rgba(255, 255, 255, 0.95) 0%,
+        rgba(255, 255, 255, 0.95) 100%
+      ),
+      hsl(234, 85%, 45%);
+    color: hsl(234, 85%, 45%);
+  }
+
+
+@media screen and (min-width: 800px) {
+
+    .main {
+        margin-inline: auto;
+        max-width: 736px;
+        display: flex;
+        box-shadow: 0px 30px 60px 0px rgba(61, 108, 236, 0.15);
+        border-radius: 3.2rem;
+    }
+
+    .main > * {
+        flex-basis: 100%;
+    }
+
+    .result {
+        border-radius: 3.2rem;
+    }
+
+    .result_title {
+        font-size: 2.4rem;
+    }
+
+    .result_score {
+        width: 200px;
+        height: 200px;
+    }
+
+    .result_score h1 {
+        font-size: 7.2rem;
+    }
+
+    .result_score p {
+        font-size: 1.8rem;
+    }
+
+    .feedback {
+        text-align: center;
+    }
+
+    .feedback h2 {
+        font-size: 3.2rem;
+    }
+
+    .feedback p {
+        max-width: 25ch;
+    }
+
+    /* SUMMARY */
+    .summary {
+        padding-inline: 4rem;
+        padding-bottom: 2.8rem;
+    }
+
+    .summary_title {
+        font-size: 2.4rem;
+    }
+
+    .summary_cate {
+        margin-block: 0;
+        margin-top: 2.5rem;
+        margin-bottom: 3.5rem;
+    }
+
+    .summary_cate > * + * {
+        margin-top: 1.5rem;
+        font-size: 1.8rem;
+      }
+
+    .btn_continue {
+        font-size: 1.6rem;
+    }  
+
+    .btn_continue:hover {
+        background: linear-gradient(
+            180deg,
+            #75f 0%,
+            #6943ff 0.01%,
+            #2f2ce9 100%
+          );
+        ;
+    }
+
+  }
